821:fix/styling unsplash scrollbar

--- a/styles/_editorjs.scss
+++ b/styles/_editorjs.scss
@@ -257,7 +257,7 @@
         border:1px solid lightgrey ;
         .panel-scroll{
           &::-webkit-scrollbar {
-            width: 16px;
+            width: 0.5rem;
           }
           
           &::-webkit-scrollbar-track {
@@ -265,6 +265,7 @@
           }
            
           &::-webkit-scrollbar-thumb {
+            border-radius: 1rem;
             background: var(--scrollbar-thumb-color); 
           }
           
